--- a/nhk_easy_news.html
+++ b/nhk_easy_news.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<div class="sfb">
+	<div class="search">
 		<h1 class="sc">NHK EASY NEWS SEARCH</h1>
 		<div class="sc">
 			<form action="https://global.bing.com/search" id="sfgo">
@@ -29,8 +29,8 @@
 		#ul ul li {
 			display:inline;
 		}
-		.sfb {
-    		margin-top: 100px;
+		.search {
+    		margin-top: 12rem;
 		}
 		.sc {
 			text-align: center;
@@ -40,8 +40,11 @@
 			border-radius: 2rem;
 			padding: 10px;
 			width: 70%;
+			outline: none;
 		}
-		.is {margin-top: 10px;
+		.is {
+			cursor: pointer;
+			margin-top: 10px;
 			padding: 6px 10px;
 			padding: 0.428571429rem 0.714285714rem;
 			font-size: 14px;
@@ -52,6 +55,7 @@
 			border: 1px solid #000000;
 			border-radius: 2rem;
 			padding: 10px 20px;
+			outline: none;
 		}
 		
 	</style>
